--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ nav a:hover{
 #banner{
     display: flex;
     justify-content: center;
-    background-image: url("../images/oficial.png");
+    background-image: url("../images/oficial2.png");
     background-position: center;
     background-size:cover;
     height: 400px;
