--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -148,3 +148,30 @@ footer{
     align-items: center;
     color: #68686870;
 }
+.menuMobile{
+    display: none;
+    width: 30px;
+    height: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+}
+.mm_line{
+    height: 4px;
+    background-color: #727272;
+}
+@media only screen  and (max-width: 899px){
+    nav ul{
+        flex-direction: column;
+        display: none;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color: white;
+    }
+    .menuMobile{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
