--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,3 +160,49 @@ footer{
     align-items: center;
     color: #68686870;
 }
+.menuMobile{
+    display: none;
+    width: 30px;
+    height: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+}
+.mm_line{
+    height: 4px;
+    background-color: #727272;
+}
+@media only screen  and (max-width: 899px){
+    nav ul{
+        flex-direction: column;
+        display: none;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color: white;
+    }
+    .menuMobile{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
+@media only screen and (max-width:839px){
+    .boxint{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .caixinha1{
+        width: 100%;
+    }
+    .caixinha2{
+        width: 100%;
+    }
+    .caixinha3{
+        width: 100%;
+    }
+    .caixinha4{
+        width: 100%;
+    }
+}
