--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -135,4 +135,7 @@ footer{
         flex-direction: column;
         justify-content: space-around;
     }
+    .boxint{
+        width: 70%;
+    }
 }
