--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -126,7 +126,7 @@ nav a:hover{
     flex-wrap: wrap;
 }
 iframe{
-    width: 600px;
+    width: 100%;
     height: 300px;
 }
 ion-icon{
@@ -173,5 +173,22 @@ footer{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+    }
+    .boxint{
+        width: 100%;
+    }
+}
+@media only screen and (max-width:599px){
+    .caixa{
+        flex-direction: column;
+    }
+    .texto2{
+        width: 100%;
+    }
+    .box2{
+        flex-direction: column;
+    }
+    .texto{
+        margin-top: 25px;
     }
 }
