--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -126,7 +126,7 @@ nav a:hover{
     flex-wrap: wrap;
 }
 iframe{
-    width: 100%;
+    width: 97%;
     height: 300px;
 }
 ion-icon{
@@ -178,17 +178,32 @@ footer{
         width: 100%;
     }
 }
-@media only screen and (max-width:599px){
+@media only screen and (max-width:620px){
     .caixa{
         flex-direction: column;
     }
     .texto2{
-        width: 100%;
+        max-width: 599px;
+        width: 98%;
     }
     .box2{
+        margin-left: -30px;
+        padding-left: -30px;
         flex-direction: column;
+    }
+    .boxint{
+        max-width: 599px;
+        width: 100%;
     }
     .texto{
         margin-top: 25px;
+    }
+    iframe{
+        max-width: 599px;
+        margin: 0;
+        padding: 0;
+    }
+    .banner_headline{
+        margin-left: 10px;
     }
 }
